# etsy-shipping-profile-builder

./: .env.template  .gitignore  Makefile  pyproject.toml
data/: customs_item.json  package.json
data/country/: austria.csv
src/: clock.py  data_loader.py  data_loaders.py  main.py  rates_df.py  settings.py  swotzy_rate_service.py  utils.py
src/api/: api_base.py  api_swotzy.py  protocols.py  swotzy_client.py
src/data_loaders/: csv_country_loader.py  protocols.py
src/dataframes/: rates_df.py
src/schemas/: country.py  rates.py  rates_config.py
src/utils/: builder.py  dir_iterator.py  file_writer.py  filename_composer.py  utils.py
